[gd_scene load_steps=9 format=2]

[ext_resource path="res://Escape Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Rocket.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/return.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/home.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/power.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Escape Menu" type="PopupMenu"]
margin_left = 406.0
margin_top = -20.0
margin_right = 426.0
script = ExtResource( 1 )

[node name="Home" type="Button" parent="."]
margin_top = 232.0
margin_right = 144.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "Home"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="."]
margin_top = 292.0
margin_right = 144.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 2 )
text = "Retry"
icon = ExtResource( 3 )

[node name="Quit" type="Button" parent="."]
margin_top = 352.0
margin_right = 144.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
